--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -10,27 +10,27 @@ msgstr ""
 "Surprime %s : la date de début (%s) doit être supérieure à celle de la "
 "garantie associée (%s)"
 
-msgctxt "error:contract.wizard.create_extra_premium:"
+msgctxt "error:contract.create_extra_premium:"
 msgid "Please select a covered data to continue"
 msgstr "Veuillez sélectionner une garantie pour continuer"
 
-msgctxt "error:contract.wizard.manage_exclusion.select:"
+msgctxt "error:contract.manage_exclusion.select:"
 msgid "At least one exclusion must be selected"
 msgstr "Au moins une exclusion doit être sélectionnée"
 
-msgctxt "error:contract.wizard.manage_exclusion:"
+msgctxt "error:contract.manage_exclusion:"
 msgid "At least one exclusion must be selected"
 msgstr "Au moins une exclusion doit être sélectionnée"
 
-msgctxt "error:contract.wizard.manage_exclusion:"
+msgctxt "error:contract.manage_exclusion:"
 msgid "No covered data found in the context, please report this"
 msgstr "Aucune garantie dans le contexte"
 
-msgctxt "error:contract.wizard.manage_extra_premium:"
+msgctxt "error:contract.manage_extra_premium:"
 msgid "At least one extra premium must be selected"
 msgstr "Au moins une surprime doit être sélectionnée"
 
-msgctxt "error:contract.wizard.manage_extra_premium:"
+msgctxt "error:contract.manage_extra_premium:"
 msgid "There may be only one coverage selected for this action"
 msgstr "Une seule garantie doit être sélectionnée pour continuer"
 
@@ -400,7 +400,7 @@ msgstr "ID"
 
 msgctxt "field:contract.covered_data-exclusion.kind,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:contract.covered_data-exclusion.kind,write_date:"
 msgid "Write Date"
@@ -436,7 +436,7 @@ msgstr "Créé par"
 
 msgctxt "field:contract.covered_data.extra_premium,currency:"
 msgid "Currency"
-msgstr "Devises"
+msgstr "Devise"
 
 msgctxt "field:contract.covered_data.extra_premium,currency_digits:"
 msgid "Currency Digits"
@@ -450,8 +450,8 @@ msgctxt "field:contract.covered_data.extra_premium,end_date:"
 msgid "End date"
 msgstr "Date de Fin"
 
-msgctxt "field:contract.covered_data.extra_premium,fixed_amount:"
-msgid "Fixed amount"
+msgctxt "field:contract.covered_data.extra_premium,flat_amount:"
+msgid "Flat amount"
 msgstr "Montant fixe"
 
 msgctxt "field:contract.covered_data.extra_premium,id:"
@@ -476,7 +476,7 @@ msgstr "Taux sur prime"
 
 msgctxt "field:contract.covered_data.extra_premium,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:contract.covered_data.extra_premium,start_date:"
 msgid "Start date"
@@ -758,156 +758,156 @@ msgctxt "field:contract.service,expenses:"
 msgid "Expenses"
 msgstr "Frais"
 
-msgctxt "field:contract.wizard.create_extra_premium.create,contract:"
+msgctxt "field:contract.create_extra_premium.create,contract:"
 msgid "Contract"
-msgstr "Gestionnaire de Contrats"
+msgstr "Contrat"
 
-msgctxt "field:contract.wizard.create_extra_premium.create,covered_data:"
+msgctxt "field:contract.create_extra_premium.create,covered_data:"
 msgid "Covered Data"
 msgstr "Données de Couverture"
 
-msgctxt "field:contract.wizard.create_extra_premium.create,covered_element:"
+msgctxt "field:contract.create_extra_premium.create,covered_element:"
 msgid "Covered Element"
 msgstr "Elément Couvert"
 
-msgctxt "field:contract.wizard.create_extra_premium.create,extra_premium:"
+msgctxt "field:contract.create_extra_premium.create,extra_premium:"
 msgid "Extra Premium"
 msgstr "Surprime"
 
-msgctxt "field:contract.wizard.create_extra_premium.create,id:"
+msgctxt "field:contract.create_extra_premium.create,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.wizard.create_extra_premium.create,must_expand_tree:"
+msgctxt "field:contract.create_extra_premium.create,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.wizard.manage_exclusion.select,coverages:"
+msgctxt "field:contract.manage_exclusion.select,coverages:"
 msgid "Coverages"
 msgstr "Garanties"
 
-msgctxt "field:contract.wizard.manage_exclusion.select,exclusions:"
+msgctxt "field:contract.manage_exclusion.select,exclusions:"
 msgid "Exclusions"
 msgstr "Exclusions"
 
-msgctxt "field:contract.wizard.manage_exclusion.select,id:"
+msgctxt "field:contract.manage_exclusion.select,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.wizard.manage_exclusion.select,must_expand_tree:"
+msgctxt "field:contract.manage_exclusion.select,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.wizard.manage_exclusion.select.exclusion,exclusion:"
+msgctxt "field:contract.manage_exclusion.select.exclusion,exclusion:"
 msgid "Exclusion"
 msgstr "Exclusion"
 
-msgctxt "field:contract.wizard.manage_exclusion.select.exclusion,id:"
+msgctxt "field:contract.manage_exclusion.select.exclusion,id:"
 msgid "ID"
 msgstr "ID"
 
 msgctxt ""
-"field:contract.wizard.manage_exclusion.select.exclusion,must_expand_tree:"
+"field:contract.manage_exclusion.select.exclusion,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.wizard.manage_exclusion.select.exclusion,selected:"
+msgctxt "field:contract.manage_exclusion.select.exclusion,selected:"
 msgid "Selected"
 msgstr "Coché"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,contract:"
+msgctxt "field:contract.manage_extra_premium.select,contract:"
 msgid "Contract"
-msgstr "Gestionnaire de Contrats"
+msgstr "Contrat"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,coverages:"
+msgctxt "field:contract.manage_extra_premium.select,coverages:"
 msgid "Coverages"
 msgstr "Garanties"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,covered_data:"
+msgctxt "field:contract.manage_extra_premium.select,covered_data:"
 msgid "Covered Data"
 msgstr "Données de Couverture"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,covered_element:"
+msgctxt "field:contract.manage_extra_premium.select,covered_element:"
 msgid "Covered Element"
 msgstr "Elément Couvert"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,extra_premiums:"
+msgctxt "field:contract.manage_extra_premium.select,extra_premiums:"
 msgid "Extra Premiums"
 msgstr "Surprimes"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,id:"
+msgctxt "field:contract.manage_extra_premium.select,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,kind:"
+msgctxt "field:contract.manage_extra_premium.select,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select,must_expand_tree:"
+msgctxt "field:contract.manage_extra_premium.select,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select.coverage,coverage:"
+msgctxt "field:contract.manage_extra_premium.select.coverage,coverage:"
 msgid "Coverage"
 msgstr "Offre"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.coverage,coverage_name:"
+"field:contract.manage_extra_premium.select.coverage,coverage_name:"
 msgid "Coverage"
 msgstr "Offre"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select.coverage,id:"
+msgctxt "field:contract.manage_extra_premium.select.coverage,id:"
 msgid "ID"
 msgstr "ID"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.coverage,must_expand_tree:"
+"field:contract.manage_extra_premium.select.coverage,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select.coverage,selected:"
+msgctxt "field:contract.manage_extra_premium.select.coverage,selected:"
 msgid "Selected"
 msgstr "Coché"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.exclusion,exclusion:"
+"field:contract.manage_extra_premium.select.exclusion,exclusion:"
 msgid "Exclusion"
 msgstr "Exclusion"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select.exclusion,id:"
+msgctxt "field:contract.manage_extra_premium.select.exclusion,id:"
 msgid "ID"
 msgstr "ID"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.exclusion,must_expand_tree:"
+"field:contract.manage_extra_premium.select.exclusion,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.exclusion,selected:"
+"field:contract.manage_extra_premium.select.exclusion,selected:"
 msgid "Selected"
 msgstr "Coché"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.extra,extra_premium:"
+"field:contract.manage_extra_premium.select.extra,extra_premium:"
 msgid "Extra Premium"
 msgstr "Surprime"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.extra,extra_premium_name:"
+"field:contract.manage_extra_premium.select.extra,extra_premium_name:"
 msgid "Extra Premium"
 msgstr "Surprime"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select.extra,id:"
+msgctxt "field:contract.manage_extra_premium.select.extra,id:"
 msgid "ID"
 msgstr "ID"
 
 msgctxt ""
-"field:contract.wizard.manage_extra_premium.select.extra,must_expand_tree:"
+"field:contract.manage_extra_premium.select.extra,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.wizard.manage_extra_premium.select.extra,selected:"
+msgctxt "field:contract.manage_extra_premium.select.extra,selected:"
 msgid "Selected"
 msgstr "Coché"
 
@@ -1041,31 +1041,31 @@ msgctxt "model:contract.service,name:"
 msgid "Contract Service"
 msgstr "Prestation Fournie"
 
-msgctxt "model:contract.wizard.create_extra_premium.create,name:"
+msgctxt "model:contract.create_extra_premium.create,name:"
 msgid "Extra Premium Displayer"
 msgstr "Surprime"
 
-msgctxt "model:contract.wizard.manage_exclusion.select,name:"
+msgctxt "model:contract.manage_exclusion.select,name:"
 msgid "Exclusion Display"
 msgstr "Exclusion"
 
-msgctxt "model:contract.wizard.manage_exclusion.select.exclusion,name:"
+msgctxt "model:contract.manage_exclusion.select.exclusion,name:"
 msgid "Exclusion"
 msgstr "Exclusion"
 
-msgctxt "model:contract.wizard.manage_extra_premium.select,name:"
+msgctxt "model:contract.manage_extra_premium.select,name:"
 msgid "Extra Premium Display"
 msgstr "Surprime"
 
-msgctxt "model:contract.wizard.manage_extra_premium.select.coverage,name:"
+msgctxt "model:contract.manage_extra_premium.select.coverage,name:"
 msgid "Coverage"
 msgstr "Offre"
 
-msgctxt "model:contract.wizard.manage_extra_premium.select.exclusion,name:"
+msgctxt "model:contract.manage_extra_premium.select.exclusion,name:"
 msgid "Exclusion"
 msgstr "Exclusion"
 
-msgctxt "model:contract.wizard.manage_extra_premium.select.extra,name:"
+msgctxt "model:contract.manage_extra_premium.select.extra,name:"
 msgid "Extra Premium"
 msgstr "Surprime"
 
@@ -1158,7 +1158,7 @@ msgid "Terminated"
 msgstr "Terminé"
 
 msgctxt "selection:contract.covered_data.extra_premium,calculation_kind:"
-msgid "Fixed Amount"
+msgid "Flat Amount"
 msgstr "Montant fixe"
 
 msgctxt "selection:contract.covered_data.extra_premium,calculation_kind:"
@@ -1201,15 +1201,15 @@ msgctxt "selection:contract.service,status:"
 msgid "Not Eligible"
 msgstr "Non Eligible"
 
-msgctxt "selection:contract.wizard.manage_extra_premium.select,kind:"
+msgctxt "selection:contract.manage_extra_premium.select,kind:"
 msgid "Contract"
 msgstr "Contrat"
 
-msgctxt "selection:contract.wizard.manage_extra_premium.select,kind:"
+msgctxt "selection:contract.manage_extra_premium.select,kind:"
 msgid "Covered Data"
 msgstr "Données de Couverture"
 
-msgctxt "selection:contract.wizard.manage_extra_premium.select,kind:"
+msgctxt "selection:contract.manage_extra_premium.select,kind:"
 msgid "Extra Premium"
 msgstr "Surprime"
 
@@ -1317,19 +1317,19 @@ msgctxt "view:contract.service:"
 msgid "Contract Service"
 msgstr "Prestation Fournie"
 
-msgctxt "view:contract.wizard.create_extra_premium.create:"
+msgctxt "view:contract.create_extra_premium.create:"
 msgid "Extra Premium Creation"
 msgstr "Création de surprime"
 
-msgctxt "view:contract.wizard.manage_extra_premium.select.coverage:"
+msgctxt "view:contract.manage_extra_premium.select.coverage:"
 msgid "Select Coverage"
 msgstr "Sélection de garantie"
 
-msgctxt "view:contract.wizard.manage_extra_premium.select.extra:"
+msgctxt "view:contract.manage_extra_premium.select.extra:"
 msgid "Select Extra Premium"
 msgstr "Sélection de la surprime"
 
-msgctxt "view:contract.wizard.manage_extra_premium.select:"
+msgctxt "view:contract.manage_extra_premium.select:"
 msgid "Manage Extra Premium"
 msgstr "Gérer les surprimes"
 
@@ -1374,58 +1374,58 @@ msgid "Start"
 msgstr "Commencer"
 
 msgctxt ""
-"wizard_button:contract.wizard.create_extra_premium,extra_premium,cancel:"
+"wizard_button:contract.create_extra_premium,extra_premium,cancel:"
 msgid "Cancel"
 msgstr "Annuler"
 
 msgctxt ""
-"wizard_button:contract.wizard.create_extra_premium,extra_premium,create:"
+"wizard_button:contract.create_extra_premium,extra_premium,create:"
 msgid "Create"
 msgstr "Créer"
 
 msgctxt ""
-"wizard_button:contract.wizard.create_extra_premium,extra_premium,create_extra:"
+"wizard_button:contract.create_extra_premium,extra_premium,create_extra:"
 msgid "Create"
 msgstr "Créer"
 
 msgctxt ""
-"wizard_button:contract.wizard.create_extra_premium,extra_premium,end:"
+"wizard_button:contract.create_extra_premium,extra_premium,end:"
 msgid "Cancel"
 msgstr "Annuler"
 
-msgctxt "wizard_button:contract.wizard.manage_exclusion,existing,end:"
-msgid "Exit"
+msgctxt "wizard_button:contract.manage_exclusion,existing,end:"
+msgid "End"
 msgstr "Terminer"
 
 msgctxt ""
-"wizard_button:contract.wizard.manage_exclusion,existing,propagate_selected:"
+"wizard_button:contract.manage_exclusion,existing,propagate_selected:"
 msgid "Propagate Selected"
-msgstr "Propager"
+msgstr "Propager la sélection"
 
-msgctxt "wizard_button:contract.wizard.manage_exclusion.select,existing,end:"
-msgid "Exit"
+msgctxt "wizard_button:contract.manage_exclusion.select,existing,end:"
+msgid "End"
 msgstr "Terminer"
 
 msgctxt ""
-"wizard_button:contract.wizard.manage_exclusion.select,existing,propagate_selected:"
+"wizard_button:contract.manage_exclusion.select,existing,propagate_selected:"
 msgid "Propagate Selected"
-msgstr "Propager"
+msgstr "Propager la sélection"
 
 msgctxt ""
-"wizard_button:contract.wizard.manage_extra_premium,existing,delete_selected:"
+"wizard_button:contract.manage_extra_premium,existing,delete_selected:"
 msgid "Delete Selected"
-msgstr "Supprimer"
+msgstr "Supprimer la sélection"
 
-msgctxt "wizard_button:contract.wizard.manage_extra_premium,existing,end:"
-msgid "Exit"
+msgctxt "wizard_button:contract.manage_extra_premium,existing,end:"
+msgid "End"
 msgstr "Terminer"
 
 msgctxt ""
-"wizard_button:contract.wizard.manage_extra_premium,existing,propagate_selected:"
+"wizard_button:contract.manage_extra_premium,existing,propagate_selected:"
 msgid "Propagate Selected"
-msgstr "Propager"
+msgstr "Propager la sélection"
 
 msgctxt ""
-"wizard_button:contract.wizard.manage_extra_premium,existing,propagate_whole:"
+"wizard_button:contract.manage_extra_premium,existing,propagate_whole:"
 msgid "Propagate Whole"
-msgstr "Propager"
+msgstr "Propager la totalité"
